src/test/ui/nll/closure-requirements/escape-argument-callee.stderr
note: no external requirements
  --> $DIR/escape-argument-callee.rs:26:38
   |
LL |         let mut closure = expect_sig(|p, y| *p = y);
   |                                      ^^^^^^
   |
   = note: defining type: test::{closure#0} with closure substs [
               i16,
               for<'r, 's, 't0> extern "rust-call" fn((&ReLateBound(DebruijnIndex(0), BoundRegion { var: 0, kind: BrNamed('r) }) mut &ReLateBound(DebruijnIndex(0), BoundRegion { var: 1, kind: BrNamed('s) }) i32, &ReLateBound(DebruijnIndex(0), BoundRegion { var: 2, kind: BrNamed('t0) }) i32)),
               (),
           ]

error: lifetime may not live long enough
  --> $DIR/escape-argument-callee.rs:26:45
   |
LL |         let mut closure = expect_sig(|p, y| *p = y);
   |                                       -  -  ^^^^^^ assignment requires that `'1` must outlive `'2`
   |                                       |  |
   |                                       |  has type `&'1 i32`
   |                                       has type `&'_#2r mut &'2 i32`

note: no external requirements
  --> $DIR/escape-argument-callee.rs:20:1
   |
LL | fn test() {
   | ^^^^^^^^^
   |
   = note: defining type: test

error: aborting due to previous error

